Update project dependencies
